2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_set_mute): round volume instead of
	truncating on unmute so a simple mute/unmute doesn't lower the
	volume (fixes bug #400966)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* factory.c: (main): don't leak the GnomeProgram reference

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-multimedia-keys.c: (acme_filter_events): make sure
	we have a key event before treating it as such (fixes bug #382503)

2007-01-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-keyboard-xkb.c:
	(gnome_settings_keyboard_xkb_init): don't install the same filter
	twice; we already install it for all windows, so we don't need
	another one for the root window (fixes bug #382504)

2007-01-30  Jens Granseuer  <jensgr@gmx.net>

	* gsd-media-keys-window.c: (gsd_media_keys_window_new): property
	is called "focus-on-map", not "set-focus-on-map"

2007-01-30  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c: (update_state): initialize 'vol'
	variable to prevent crashes/assertion failures trying to set
	ridiculously high/low volume (fixes bug #401376)

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-background.c:
	* gnome-settings-background.h:
	* gnome-settings-dbus.c:
	* gnome-settings-font.c:
	* gnome-settings-font.h:
	* gnome-settings-keyboard.c: (numlock_NumLock_modifier_mask),
	(numlock_gconf_state_key), (numlock_get_gconf_state),
	(numlock_install_xkb_callback):
	* gnome-settings-mouse.c:
	* gnome-settings-mouse.h:
	* gnome-settings-xmodmap.c: (gnome_settings_load_modmap_files):
	Sparse warning fixes:
	- Mark some stuff static
	- ANSIfication of function declarations
	- Some other bits.

2007-01-14  Thomas Wood  <thos@gnome.org>

	Patch by: Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c: Remove has_filter variable
	that was never initialised. Fixes bug 382502.
